--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production --devtool=false"
   },
   "dependencies": {
-    "@polymer/lit-element": "^0.5.2",
-    "@webcomponents/webcomponentsjs": "^2.1.1"
+    "@polymer/lit-element": "^0.6.0-dev.6",
+    "cuid": "^2.1.4",
+    "redux": "^4.0.0",
+    "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
-    "@webpack-cli/serve": "^0.1.0",
     "css-loader": "^1.0.0",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "@types/redux": "^3.6.0"
   }
 }
