--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "ts1",
+  "name": "dev-forum",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack --mode=production --devtool=false"
+    "build": "webpack --mode=production --devtool=false",
+    "deploy:web": "npm run build && firebase deploy --only hosting",
+    "deploy:server": "firebase deploy --only functions",
+    "deploy:full": "npm run deploy:web && npm run deploy:server"
   },
   "dependencies": {
-    "@polymer/lit-element": "^0.6.0-dev.6",
+    "@polymer/lit-element": "^0.6.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0-beta.3",
     "cuid": "^2.1.4",
+    "firebase": "^5.5.0",
+    "firebaseui": "^3.4.1",
     "redux": "^4.0.0",
+    "rxfire": "^3.0.1",
+    "rxjs": "^6.3.2",
     "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
+    "@types/redux": "^3.6.0",
+    "@webpack-cli/serve": "^0.1.0",
     "css-loader": "^1.0.0",
+    "firebase-tools": "^4.2.1",
+    "minify-lit-html-loader": "^0.0.3",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
-    "@types/redux": "^3.6.0"
+    "webpack-dev-server": "^3.1.8"
   }
 }
