finished replies feature

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@polymer/lit-element": "^0.6.0",
     "@webcomponents/webcomponentsjs": "^2.0.0-beta.3",
     "cuid": "^2.1.4",
+    "fast-deep-equal": "^2.0.1",
     "firebase": "^5.5.0",
     "firebaseui": "^3.4.1",
+    "lodash": "^4.17.11",
     "redux": "^4.0.0",
     "rxfire": "^3.0.1",
     "rxjs": "^6.3.2",
